@@ -1,8 +1,6 @@
 package com.jl.mastermind.controller;
 
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.jl.mastermind.controllers.PlayerScoreController;
 import com.jl.mastermind.entities.PlayerScore;
 import com.jl.mastermind.services.PlayerScoreService;
 
@@ -12,10 +10,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -25,6 +23,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 @SpringBootTest
 @AutoConfigureMockMvc
+@ActiveProfiles("dev")
 class PlayerScoreControllerTest {
 
     @Autowired
@@ -33,36 +32,38 @@ class PlayerScoreControllerTest {
     @MockitoBean
     private PlayerScoreService playerScoreService;
 
-    @Autowired
-    private ObjectMapper objectMapper;
-
-
     private List<PlayerScore> mockPlayerScores;
 
     @BeforeEach
     void setUp() {
-        mockPlayerScores = Arrays.asList(
-            new PlayerScore("Player1", 1000, 4),
-            new PlayerScore("Player2", 950, 4),
-            new PlayerScore("Player3", 900, 4),
-            new PlayerScore("Player4", 850, 4),
-            new PlayerScore("Player5", 800, 4)
+        this.mockPlayerScores = List.of(
+            PlayerScore.builder().username("testuser1").score(1).difficulty(4).build(),
+            PlayerScore.builder().username("testuser2").score(2).difficulty(4).build(),
+            PlayerScore.builder().username("testuser3").score(3).difficulty(4).build(),
+            PlayerScore.builder().username("testuser4").score(4).difficulty(4).build(),
+            PlayerScore.builder().username("testuser5").score(5).difficulty(4).build(),
+            PlayerScore.builder().username("testuser6").score(6).difficulty(4).build(),
+            PlayerScore.builder().username("testuser7").score(7).difficulty(4).build(),
+            PlayerScore.builder().username("testuser8").score(8).difficulty(4).build(),
+            PlayerScore.builder().username("testuser9").score(9).difficulty(4).build(),
+            PlayerScore.builder().username("testuser10").score(10).difficulty(4).build(),
+            PlayerScore.builder().username("testuser11").score(11).difficulty(4).build(),
+            PlayerScore.builder().username("testuser12").score(12).difficulty(4).build(),
+            PlayerScore.builder().username("testuser13").score(13).difficulty(4).build(),
+            PlayerScore.builder().username("testuser14").score(14).difficulty(4).build(),
+            PlayerScore.builder().username("testuser15").score(15).difficulty(4).build()
         );
     }
 
     @Test
     void getTop10Entity_ShouldReturnTop10Scores_WhenScoresExist() throws Exception {
 
-        when(playerScoreService.getTop10("4")).thenReturn(mockPlayerScores);
+        when(playerScoreService.getTop10("4")).thenReturn(mockPlayerScores.subList(5, 15));
 
         mockMvc.perform(get("/ScoreLeaderboard/difficulty/4"))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.length()").value(5))
-                .andExpect(jsonPath("$[0].username").value("Player1"))
-                .andExpect(jsonPath("$[0].score").value(1000))
-                .andExpect(jsonPath("$[1].username").value("Player2"))
-                .andExpect(jsonPath("$[1].score").value(950));
+                .andExpect(jsonPath("$.length()").value(10));
     }
 
     @Test
@@ -75,34 +76,6 @@ class PlayerScoreControllerTest {
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.length()").value(0))
                 .andExpect(content().json("[]"));
-    }
-
-    @Test
-    void getTop10Entity_ShouldReturnExactly10Scores_WhenMoreThan10ScoresExist() throws Exception {
-        List<PlayerScore> fifteenScores = Arrays.asList(
-            new PlayerScore("Player1", 1000, 4),
-            new PlayerScore("Player2", 950, 4),
-            new PlayerScore("Player3", 900, 4),
-            new PlayerScore("Player4", 850, 4),
-            new PlayerScore("Player5", 800, 4),
-            new PlayerScore("Player6", 750, 4),
-            new PlayerScore("Player7", 700, 4),
-            new PlayerScore("Player8", 650, 4),
-            new PlayerScore("Player9", 600, 4),
-            new PlayerScore("Player10", 550, 4),
-            new PlayerScore("Player11", 500, 4),
-            new PlayerScore("Player12", 450, 4),
-            new PlayerScore("Player13", 400, 4),
-            new PlayerScore("Player14", 350, 4),
-            new PlayerScore("Player15", 300, 4)
-        );
-
-        when(playerScoreService.getTop10("4")).thenReturn(fifteenScores.subList(0, 10));
-
-        mockMvc.perform(get("/ScoreLeaderboard/difficulty/4"))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.length()").value(10));
     }
 
 }
